; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vdp2.c_Vdp2SaveState.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_vdp2.c_Vdp2SaveState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"VDP2\00", align 1
@Vdp2Regs = common dso_local global i64 0, align 8
@Vdp2Ram = common dso_local global i64 0, align 8
@Vdp2ColorRam = common dso_local global i64 0, align 8
@Vdp2Internal = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Vdp2SaveState(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %2, align 8
  %5 = bitcast %struct.TYPE_3__* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %5, i8 0, i64 8, i1 false)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @StateWriteHeader(i32* %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 %7, i32* %3, align 4
  %8 = load i64, i64* @Vdp2Regs, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @ywrite(%struct.TYPE_3__* %4, i8* %9, i32 4, i32 1, i32* %10)
  %12 = load i64, i64* @Vdp2Ram, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @ywrite(%struct.TYPE_3__* %4, i8* %13, i32 524288, i32 1, i32* %14)
  %16 = load i64, i64* @Vdp2ColorRam, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @ywrite(%struct.TYPE_3__* %4, i8* %17, i32 4096, i32 1, i32* %18)
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @ywrite(%struct.TYPE_3__* %4, i8* bitcast (i32* @Vdp2Internal to i8*), i32 4, i32 1, i32* %20)
  %22 = load i32*, i32** %2, align 8
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @StateFinishHeader(i32* %22, i32 %23)
  ret i32 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @StateWriteHeader(i32*, i8*, i32) #2

declare dso_local i32 @ywrite(%struct.TYPE_3__*, i8*, i32, i32, i32*) #2

declare dso_local i32 @StateFinishHeader(i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
